--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <td>
                             <font face="arial" color="#000000" size="5">
                                 <span class="fa fa-user-circle" aria-hidden="true"></span>
-                                Saurabh Shukla
+                                seventhreality
                             </font>
                         </td>
                         <td >
@@ -32,7 +32,7 @@
                             <a href="#services"><font face="arial" color="#ffffff" size="4">Services</font></a>
                         </td>
                         <td>
-                            <a href="#testimonial"><font face="arial" color="#ffffff" size="4">Testimonials</font></a>
+                            
                         </td>
                         <td>
                             <a href="#achievements"><font face="arial" color="#ffffff" size="4">Achievements</font></a>
