--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <td>
                             <font face="arial" color="#000000" size="5">
                                 <span class="fa fa-user-circle" aria-hidden="true"></span>
-                                seventhreality
+                                seventh-reality
                             </font>
                         </td>
                         <td >
@@ -58,13 +58,13 @@
                         <td align="center" valign="middle">
                             <h3>
                                 <font face="arial" color="#ffffff" size="6">
-                                     Hi, I'm Saurabh Shukla
+                                     WEBAR
                                 </font>
                             </h3>
                         
                         <h2>
                             <font face="arial" color="#f3971b" size="7">
-                                SEVENTHREALITY
+                                SEVENTH-REALITY
                            </font>
                         </h2>
                         </td>
