--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <td>
                             <font face="arial" color="#000000" size="5">
                                 <span class="fa fa-user-circle" aria-hidden="true"></span>
-                                seventh-reality
+                                seventhreality
                             </font>
                         </td>
                         <td >
